--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <span class="tag tag-blue">HTML</span>
                         <span class="tag tag-blue">CSS</span>
                     </div>
-                    <a href="#" style="margin-top: 1rem; display: block; font-weight: 600;">Live Demo Dekhein &rarr;</a>
+                    <a href="https://my-portfolio-s5q9.onrender.com" style="margin-top: 1rem; display: block; font-weight: 600;">Live Demo Dekhein &rarr;</a>
                 </div>
 
                 <!-- Project Card 2: -->
