--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                    3. My goal is to keep improving my skills and contribute to impactful projects that solve real-world problems, inspire people, and enhance user experiences. I believe in continuous learning and building things that make a difference.
                     </p>
                     <div style="display: flex; justify-content: flex-start; padding-top: 1rem;">
-                        <a href="#Certificates" class="btn-secondary">
+                        <a href="#certifications" class="btn-secondary">
                             Certificates
                         </a>
                     </div>
