--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <!-- 5. Contact Section -->
     <section id="contact" class="section-padding" style="background-color: var(--background-white);">
         <div class="container">
-            <h2 class="section-heading">Contact</h2>
+            <h2 class="section-heading">Contact Me</h2>
             <div class="divider"></div>
 
             <div class="contact-form-card">
