--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         <label for="message" class="form-label">Message</label>
                         <textarea id="message" name="message" rows="4" required class="form-textarea"></textarea>
                     </div>
-                    <button type="submit" class="btn-primary" style="width: 100%; border: none;">
+                    <button type="submit" class="btn-tertiory" style="width: 100%; border: none;">
                         Send
                     </button>
                 </form>
