--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <img src="S1.png" alt="Project 1 Screenshot" class="project-screenshot">
                     <h3>Portfolio</h3>
                     <p style="color: #ffff; margin-bottom: 1rem;">
-                    I’m a frontend web developer passionate about building clean and functional websites using HTML, CSS, and JavaScript. I love experimenting with new designs and improving my coding skills through real-world projects.
+                  Developed a responsive personal portfolio website using HTML, CSS, and JavaScript. It highlights my projects, certificates, and achievements, providing a complete overview of my frontend development journey.
                     </p>
                     <div class="tag-container">
                         <span class="tag tag-blue">HTML</span>
