--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                     <div class="tag-container">
                         <span class="tag tag-green">HTML</span>
                         <span class="tag tag-green">CSS</span>
+                        <span class="tag tag-green">JAVASCRIPT</span>
                     </div>
                     <a href="https://amazon-t84w.onrender.com" style="margin-top: 1rem; display: block; font-weight: 600;">Deploy Link &rarr;</a>
                 </div>
