--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <div class="tag-container">
                         <span class="tag tag-blue">HTML</span>
                         <span class="tag tag-blue">CSS</span>
-                        <span class="tag tag-green">JAVASCRIPT</span>
+                        <span class="tag tag-blue">JAVASCRIPT</span>
                     </div>
                     <a href="https://my-portfolio-s5q9.onrender.com" style="margin-top: 1rem; display: block; font-weight: 600;">Live Demo Dekhein &rarr;</a>
                 </div>
@@ -272,9 +272,9 @@
                     Created a responsive Movies website using HTML, CSS, and JavaScript. Implemented dynamic display of movie ratings and descriptions, focusing on responsive design and interactive frontend features.
                     </p>
                     <div class="tag-container">
-                        <span class="tag tag-purple">HTML</span>
-                        <span class="tag tag-purple">CSS</span>
-                        <span class="tag tag-purple">JAVASCRIPT</span>
+                        <span class="tag tag-red">HTML</span>
+                        <span class="tag tag-red">CSS</span>
+                        <span class="tag tag-red">JAVASCRIPT</span>
                     </div>
                     <a href="https://movies-07mn.onrender.com" style="margin-top: 1rem; display: block; font-weight: 600;">Deploy Link &rarr;</a>
                 </div>
@@ -286,9 +286,9 @@
                      Built a responsive Tic Tac Toe game using HTML, CSS, and JavaScript. Features interactive gameplay, two-player mode, and works seamlessly on different screen sizes.
                     </p>
                     <div class="tag-container">
-                        <span class="tag tag-purple">HTML</span>
-                        <span class="tag tag-purple">CSS</span>
-                         <span class="tag tag-purple">JAVASCRIPT</span>
+                        <span class="tag tag-green">HTML</span>
+                        <span class="tag tag-green">CSS</span>
+                         <span class="tag tag-green">JAVASCRIPT</span>
                     </div>
                     <a href="https://tic-tac-toe-game-y419.onrender.com" style="margin-top: 1rem; display: block; font-weight: 600;">Deploy Link &rarr;</a>
                 </div>
@@ -301,10 +301,10 @@
                     Developed an AI-powered Story Generator website using HTML, CSS, and JavaScript. Users can input prompts to generate stories along with images, showcasing interactive AI integration on the frontend.
                     </p>
                     <div class="tag-container">
-                        <span class="tag tag-yellow">HTML</span>
-                        <span class="tag tag-yellow">CSS</span>
-                        <span class="tag tag-yellow">JAVASCRIPT</span>
-                        <span class="tag tag-yellow">OPEN API</span>
+                        <span class="tag tag-red">HTML</span>
+                        <span class="tag tag-red">CSS</span>
+                        <span class="tag tag-red">JAVASCRIPT</span>
+                        <span class="tag tag-red">OPEN API</span>
                     </div>
                     <a href="#" style="margin-top: 1rem; display: block; font-weight: 600;">Deploy Link &rarr;</a>
                 </div>
