--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                     Created a responsive Movies website using HTML, CSS, and JavaScript. Implemented dynamic display of movie ratings and descriptions, focusing on responsive design and interactive frontend features.
                     </p>
                     <div class="tag-container">
-                        <span class="tag tag-red">HTML</span>
-                        <span class="tag tag-red">CSS</span>
-                        <span class="tag tag-red">JAVASCRIPT</span>
+                        <span class="tag tag-blue">HTML</span>
+                        <span class="tag tag-blue">CSS</span>
+                        <span class="tag tag-blue">JAVASCRIPT</span>
                     </div>
                     <a href="https://movies-07mn.onrender.com" style="margin-top: 1rem; display: block; font-weight: 600;">Deploy Link &rarr;</a>
                 </div>
